exercises/ex1.01/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex1-01-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex1-01
  template:
    metadata:
      labels:
        app: ex1-01
    spec:
      containers:
        - name: ex1-01
          image: sahilrajput03/ex1-01
