exercises/ex1.01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex1-01-svc
spec:
  type: ClusterIP
  selector:
    app: ex1-01
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
